--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: flitlr Blog
 header-img: img/post-bg-desk.jpg
 email: zhengzhongping35@gamil.com
 description: "春风已逝，中庸未达，已然暮暮"
-keyword: "flitlr, flitlr Blog, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "flitlr, flitlr Blog,"
 url: "http://sdew34.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
