--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "春风已逝，中庸未达，已然暮暮"
 keyword: "flitlr, flitlr Blog,"
 url: "http://sdew34.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/sdew34/sdew34.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
